# Goodreads-OOP-practicum

./: .gitignore  LICENSE  README.md
GoodreadsApp/GoodreadsApp/: CMakeLists.txt  GoodreadsApp.cpp  GoodreadsApp.h  goodreads_data.txt
GoodreadsApp/GoodreadsApp/include/commands/: AcceptOffer.h  AddBirthday.h  AddBook.h  AddSynopsis.h  AddToShelf.h  Command.h  CommandProcessor.h  CommandUtils.h  CreateShelf.h  DeleteBook.h  DeleteMessage.h  DeleteShelf.h  Follow.h  Followers.h  Friends.h  Help.h  LeavePublisher.h  Login.h  Logout.h  Offer.h  Profile.h  PublishBook.h  ReadMessage.h  Register.h  RemoveFromShelf.h  Search.h  ShowInbox.h  ShowShelf.h
GoodreadsApp/GoodreadsApp/include/models/: Author.h  Book.h  Date.h  Message.h  Publisher.h  Reader.h  Shelf.h  User.h
GoodreadsApp/GoodreadsApp/include/modules/: Author.h  Book.h  Date.h  Message.h  Publisher.h  Reader.h  Shelf.h  User.h
GoodreadsApp/GoodreadsApp/include/service/: AuthService.h  BookService.h  LibrarySystem.h  SocialService.h
GoodreadsApp/GoodreadsApp/include/services/: AuthService.h  BookService.h  FileManager.h  LibrarySystem.h  SocialService.h
GoodreadsApp/GoodreadsApp/include/utils/: Genre.h  HelperFunctions.h  ServiceExceptions.h  Status.h  TypeUsers.h  ValidationExceptions.h  ValidationUtils.h  Validator.h
GoodreadsApp/GoodreadsApp/src/: helperFunctions.h
GoodreadsApp/GoodreadsApp/src/commands/: AcceptOffer.cpp  AddBirthday.cpp  AddBook.cpp  AddSynopsis.cpp  AddToShelf.cpp  CommandProcessor.cpp  CreateShelf.cpp  DeleteBook.cpp  DeleteMessage.cpp  DeleteShelf.cpp  Follow.cpp  Followers.cpp  (+14 more)
(+27 files in other folders)
